2003-09-29  Amedeo Paglione <apaglione@mac.com> (1.2-b6)

	* Internationalized all strings in GR. English and Italian versions
	  available.

2003-09-27  Pierre-Luc Paour <gallery@paour.com> (1.2-b5)

	* After images are removed from the list, another image is selected.
	  This has been a long-standing irritant...
	* Moving more than one picture up or down is now possible.
	* Suppressing auto-rotation on the server when the user manually
	  rotates the image or GR rotates it based on the EXIF data.

2003-09-25  Pierre-Luc Paour <gallery@paour.com> (1.2-b4)

	* Implemented auto-rotate based on EXIF tag, if present. Now I need
	  protocol support to disable auto-rotate in the server when
	  uploading.
	* Implemented shutdown on upload completion. Thanks to Nick77.

2003-09-22  Pierre-Luc Paour <gallery@paour.com> (1.2-b3)

	* Fixed PHPNuke default URLs (thanks docmattman).
	* When a read-only album is selected, drag-and-drop is not allowed
	  and the Add Pictures... button is disabled.
	* When creating a new album, select the album in the popup rather
	  than the first root album (only with G 1.4.1-b75 and later,
	  remote protocol 2.5).
	* Forcing file name on uploaded files to original filename, rather
	  than the temp file used when resizing and/or rotating (only with
	  G 1.4.1-b75 and later, remote protocol 2.5).

2003-09-21  Pierre-Luc Paour <gallery@paour.com> (1.2-b2)

	* Implemented PHPNuke support (thanks docmattman).

2003-09-20  Pierre-Luc Paour <gallery@paour.com> (1.2-b1)

	* Integrated patch by Markus Cozowicz to provide feedback during long
	  uploads. Thanks Markus!
	* Created a new modal progress dialog for uploads. It shows much
	  more info, and is cancelable. The normal progress bar has been
	  improved to be less fickle when two things happen at the same
	  time.
	* Optionally ignore the return code of spawned applications. This is
	  to work around what I think is a Java VM bug on Linux where the
	  return code is wrong.