@@ -97,6 +97,9 @@ GeneralPa.updateBetaCheck = Check for beta updates
 GeneralPa.showThumbTip = Show thumbnails in the list of pictures to upload
 GeneralPa.showThumb = Show thumbnails
 GeneralPa.versionCheck = Version checks
+GeneralPa.langWarn = You need to restart Gallery Remote for this change to take effect
+GeneralPa.lang = Language:
+GeneralPa.langTitle = Language
 
 
 #PrefsDlog module
