@@ -1,1 +1,1 @@
-Select_Album = Seleziona Album
+MainFrame.Select_Album = Seleziona Album
