@@ -90,6 +90,9 @@ previewBounds=578,0,502,521
 # How far to the right of the main window the divider is
 inspectorDividerLocation=300
 
+# GR UI language: use the standard language_COUNTRY, such as fr_FR, it_IT, en_US, etc
+uiLocale=
+
 #
 # --- Technical ---
 #
@@ -121,6 +124,6 @@ updateUrlBeta=http://gallery.sourceforge.net/gallery_remote_version_check_beta.p
 #
 # --- Do not edit below this line ---
 #
-version=1.2-b6
-releaseDate=2003/09/29
+version=1.2-b7
+releaseDate=2003/09/30
 aboutText=Gallery Remote\n \n \nA part of the Gallery Open-Source Project\nhttp://gallery.sourceforge.net\n \n \nMaintained by:\n \nPierre-Luc Paour\nAmedeo Paglione\nChris Schwerdt\n \n \nInitial version by Chris Smith\n \n \nContributors:\n \nTim Miller\nDolan Halbrook\nMarkus Cozowicz\n \n \nArtwork by Ross A. Reyman\n \n \nBundled software:\n \nImageMagick\nJSX\nJava look and feel Graphics Repository icons\njpegtran, Guido Vollbeding's version\nMetadataExtractor
